argocd/objects/clickstack/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: clickstack
  labels:
    shared-gateway-access: "true"
