argocd/objects/clickstack/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: clickstack-route
  namespace: clickstack
spec:
  hostnames:
    - clickstack.k8s.notsodefault.ca
  parentRefs:
    - name: l2-gateway
      sectionName: clickstack-listener
      namespace: kube-system
  rules:
    - backendRefs:
        - name: clickstack-hyperdx
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
